--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <section>
+      <h1>Calculator App</h1>
       <div class="container">
         <div id="display"></div>
         <div class="buttons">
